# devatlas_cli

./: Cargo.toml  README.md
src/: analyzer.rs  dependencies.rs  git_stats.rs  main.rs  runner.rs  settings.rs  unused.rs
src/cache/: json_store.rs  mod.rs
src/commands/: clear_cache.rs  list_projects.rs  mod.rs  open_project.rs  scan.rs  status.rs
src/editor/: detector.rs  mod.rs
src/models/: mod.rs
src/scanner/: mod.rs  project_scanner.rs
