[package]
name = "devatlas_cli"
version = "0.1.0"
edition = "2021"
description = "DevAtlas - Developer Project Scanner CLI"
authors = ["DevAtlas Team"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0"
fuzzy-matcher = "0.3"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "0.20"
toml = "0.8"
once_cell = "1.21"
which = "8.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
